[package]
name = "kvs"
version = "0.1.0"
authours = ["Nasno Isaac <nasnoisaac@gmail.com>"]
description = "A Key Value Store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = "3.2.17"
serde = "1.0.144"
serde_json = "1.0.85"
thiserror = "1.0.32"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.3.0"
walkdir = "2.3.2"
