[package]
name = "kvs"
version = "0.1.0"
authours = ["Nasno Isaac <nasnoisaac@gmail.com>"]
description = "A Key Value Store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.144", features=["derive"]}
serde_json = "1.0.85"
sled = "0.34.6"
structopt = "0.3.26"
thiserror = "1.0.32"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
criterion = "0.3"
rand = "0.6.5"
tempfile = "3.3.0"
walkdir = "2.3.2"
